# opencv-project-dteam

./: CMakeLists.txt
include/: ClickableLabel.h  HistogramWidget.h  ImageProcessor.h  MainWindow.h  PanoramaProcessor.h  UndoManager.h
src/: HistogramWidget.cpp  ImageProcessor.cpp  MainWindow.cpp  PanoramaProcessor.cpp  UndoManager.cpp  main.cpp
